# FixOCR

./: .gitignore  LICENSE.txt  README.md  app.py  pyproject.toml
